fix articles favorite

--- a/lab-1/package.json
+++ b/lab-1/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build-static": "next build && next export",
+    "start-static": "http-server out"
   },
   "dependencies": {
     "react": "^18",
