--- a/lab-1/package.json
+++ b/lab-1/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^11.0.12",
+    "http-server": "^14.1.1",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
