--- a/lab-2/package.json
+++ b/lab-2/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
+    "@vercel/postgres": "^0.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "next": "14.1.4",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18"
   },
