--- a/lab-2/package.json
+++ b/lab-2/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "@vercel/postgres": "^0.7.2",
+    "docker": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "next": "14.1.4",
