--- a/lab-2/package.json
+++ b/lab-2/package.json
@@ -14,6 +14,7 @@
     "@vercel/postgres": "^0.7.2",
     "docker": "^1.0.0",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
     "express": "^4.19.2",
     "next": "14.1.4",
     "prisma": "^5.11.0",
